--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -6,13 +6,13 @@
   --utility-color: #ff9e00;
   --tertiary-color: #ff6d00;
 
-  --dark-bg-color: #121212;
-  --text-color: #f9f9f9;
+  --dark-bg-color: #000000;
+  --text-color: #ffffff;
 
   --transition: 0.5s ease-in-out;
 
-  --light-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-  --dark-box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.1);
+  --light-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
+  --dark-box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.1);
 }
 
 * {
